fixing alignment issues

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -354,21 +354,19 @@ img {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	width: 80%;
 	margin: 20px auto;
 	overflow: hidden;
-	border-radius: 5px;
 }
 
 #projects .project-item.show {
 	opacity: 1;
 	visibility: visible;
-	transition-delay: 0s;
+	transition-delay: 1s;
   }
 
 #projects .project-info{
-	padding: 30px;
 	flex-basis: 50%;
 	height: 100%;
 	display: flex;
@@ -376,20 +374,21 @@ img {
 	justify-content: center;
 	flex-direction: column;
 	color: #006D77;
-	border: 2px solid #006D77;
-	border-radius: 5px;
-	margin-right: 20px;
 }
 
 #projects .project-info h1{
-	font-size: 4rem;
+	font-size: 2rem;
 	font-weight: 500;
 }
 
 #projects .project-info h2{
-	font-size: 2rem;
+	font-size: 1rem;
 	font-weight: 300;
-	margin-top: 10px;
+	margin-top: 5px;
+}
+
+#projects .project-info p{
+	font-size: 1rem;
 }
 
 #projects .project-img{
@@ -397,27 +396,27 @@ img {
 	height: 200px;
 	overflow: hidden;
 	position: relative;
-	border: 2px solid #006D77;
-	border-radius: 5px;
-	margin-left: 20px;
+	border: 4px solid #006D77;
+	border-radius: 10px;
 }
 
 #projects .btn {
 	display: inline-block;
-	padding: 10px 30px;
+	padding: 5px 10px;
 	color: #006D77;
 	background-color: transparent;
-	border: 2px solid #006D77;
-	font-size: 1.5rem;
+	border: 1.5px solid #006D77;
+	font-size: 1rem;
 	text-transform: uppercase;
 	letter-spacing: .1rem;
-	margin-top: 20px;
+	margin-top: 10px;
 	transition: .3s ease;
 	transition-property: background-color, color;
 }
 
 #projects .btn:hover {
-	color: black;
+	color:#d8e2dc;
+	background-color:#006d77;
 }
 /* ---------------------------- End Projects -----------------------------------*/
 
@@ -602,6 +601,8 @@ img {
 
 /* ---------------------------- End Keyframes --------------------------------*/
 
+
+
 /* ---------------------------- For Ipad (medium) Sized Screens -----------------------*/
 
 @media only screen and (min-width: 768px){
@@ -633,6 +634,21 @@ img {
 	#projects .all-projects .project-img {
 		height: 100%;
 		width: 50%
+	}
+
+	#projects .project-info h1 {
+		font-size: 4rem;
+		font-weight: 500;
+	}
+	
+	#projects .project-info h2 {
+		font-size: 2rem;
+		font-weight: 300;
+		margin-top: 5px;
+	}
+
+	#projects .project-info p {
+		font-size: 1.5rem;
 	}
 
 	#about .about {
